--- a/package.json
+++ b/package.json
@@ -32,5 +32,10 @@
     "@actions/github": "^6.0.1",
     "pkg-types": "^2.2.0",
     "semver": "^7.7.2"
+  },
+  "pnpm": {
+    "patchedDependencies": {
+      "undici": "patches/undici.patch"
+    }
   }
 }
