--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -4,13 +4,17 @@ on:
       - main
       - alpha
       - beta
+  pull_request:
 
 jobs:
-  version-path:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Install pnpm
         uses: pnpm/action-setup@v4
@@ -29,10 +33,32 @@ jobs:
       - name: Build
         run: pnpm run build
 
-      - name: Verify no un-staged changes
-        run: |
-          git status --porcelain
-          git diff-files --quiet
+      - name: Upload publish artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: publish-artifact
+          path: dist
+
+  version-path:
+    runs-on: ubuntu-latest
+    if: ${{ github.event_name == 'push' }}
+    needs: build
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Install Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: "20"
+          cache: pnpm
+
+      - name: Download publish artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: publish-artifact
+          path: dist
 
       - name: Version patch
         uses: ./
