--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -48,10 +48,19 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10
+
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
+          cache: pnpm
+
+      - name: Install dependencies
+        run: pnpm install
 
       - name: Download publish artifact
         uses: actions/download-artifact@v4
