--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -67,6 +67,11 @@ jobs:
         with:
           name: publish-artifact
           path: dist
+      
+      - name: Set git user
+        run: |
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
 
       - name: Version patch
         uses: ./
