--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -43,6 +43,10 @@ jobs:
     runs-on: ubuntu-latest
     if: ${{ github.event_name == 'push' }}
     needs: build
+    permissions:
+      contents: write
+      issues: write
+      pull-requests: write
 
     steps:
       - name: Checkout
