--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -47,6 +47,8 @@ jobs:
       contents: write
       issues: write
       pull-requests: write
+    env:
+      GIT_MERGE_AUTOEDIT: no
 
     steps:
       - name: Checkout
