--- a/action.yaml
+++ b/action.yaml
@@ -11,9 +11,7 @@ inputs:
     description: The NPM access token to use when publishing
 
 outputs:
-  next-version:
-    description: Version of the package.
 
 runs:
   using: node20
-  main: ./dist/index.js
+  main: ./dist/index.cjs
