--- a/action.yaml
+++ b/action.yaml
@@ -9,8 +9,7 @@ branding:
 inputs:
   token:
     description: The NPM access token to use when publishing
-
-outputs:
+    required: true
 
 runs:
   using: node20
