--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -44,7 +44,7 @@ jobs:
 
   version-path:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' }}
+    if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' || github.event_name == 'repository_dispatch' }}
     needs: build
     permissions:
       contents: write
