--- a/.github/workflows/version-patch.yml
+++ b/.github/workflows/version-patch.yml
@@ -5,6 +5,10 @@ on:
       - alpha
       - beta
   pull_request:
+    branches:
+      - main
+      - alpha
+      - beta
     types: [opened, synchronize, reopened, labeled, unlabeled]
   repository_dispatch:
     types: [label-changed]
@@ -44,7 +48,7 @@ jobs:
 
   version-path:
     runs-on: ubuntu-latest
-    if: ${{ github.event_name == 'push' || github.event_name == 'pull_request' || github.event_name == 'repository_dispatch' }}
+    if: ${{ (github.event_name == 'pull_request' && github.event.pull_request.labels.*) || github.event_name == 'repository_dispatch' }}
     needs: build
     permissions:
       contents: write
